<resources>
    <string name="app_name">FaceApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_this_face">SCAN THIS FACE</string>
    <string name="face_scan_success"> <u>Scan Successful</u> </string>
    <string name="face_scan_failed"> <u>Scan Failed</u> </string>
    <string name="face_scan_question">Is this the CCO you are trying to scan? </string>
    <string name="face_scan_cancel">Cancel</string>
    <string name="face_scan_try_again">RETRY</string>
    <string name="complete_audit"><u>Complete Audit</u></string>
    <string name="no_face_matched">NO FACE MATCHED</string>
    <string name="blink_not_found">BLINK NOT FOUND</string>
    <string name="no_face_found">NO FACE FOUND</string>
    <string name="scan_face">Scan Face</string>
    <string name="authenticate">Authenticate</string>

    <string name="capture_id">Capture ID</string>
    <string name="capture">Capture</string>

    <string name="face_not_matched">FACE NOT MATCHED</string>

    <string name="Continue">Continue</string>
    <string name="firstPageText">Register Facial Template</string>
    <string name="instructionHeading">Instructions</string>
    <string name="contactsupport">Contact Product Support</string>
    <string name="please_contact_support"> Please contact Product support </string>
    <string name="issue_center">Issue Center</string>
    <string name="call_product">Call Product Support</string>
    <string name="Pop_up_dialoge"> if information provided is found to be fraudulent, you will be sanctioned </string>
    <string name="cancel">Cancel</string>
    <string name="Conform">Confirm</string>
    <string name="instructions"> This application is strictly for obtaining face template data Ensure full face of the person shows Ensure good lighting while scanning Scan faces while in open spaces and ot indoors Make sure the person blinks while scanning </string>
</resources>
